--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
-.container{
-    background-color: rgba(255, 255, 255, 0.908);
-    padding: 30px;
-    border-radius: 15px;
-     box-shadow: 0px 10px 5px 2px rgba(0, 0, 0);
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     gap: 15px;
+.container {
+  background-color: rgba(255, 255, 255, 0.908);
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0px 10px 5px 2px rgba(0, 0, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
 }
 
 .col {
@@ -23,18 +23,21 @@
   border-radius: 50%;
   background-color: #253659;
   box-shadow: inset 0px 10px 5px 2px rgba(0, 0, 0);
+  transform: translateY(-50%);
+  transition: all 0.5s ease-out;
 }
 
-.circle:hover{
+.circle:hover {
   cursor: pointer;
 }
 
-.p1{
-  background-color: #F28705;
+.p1 {
+  background-color: #f28705;
   box-shadow: inset 0px 4px 5px 2px rgba(0, 0, 0, 0.8);
+  transform: translateY(0);
 }
-
-.p2{
-  background-color: #03A696;
-  box-shadow: inset 0px 10px 5px 2px rgba(0, 0, 0);
+.p2 {
+  background-color: #03a696;
+  box-shadow: inset 0px 4px 5px 2px rgba(0, 0, 0, 0.8);
+  transform: translateY(0);
 }
